[metadata]
name = livedanmaku
version = 0.0.6
author = Merlyn Allen
author_email = xiaorui2001@outlook.com
description = A python library for resolving Bilibili Danmaku with Flask-style API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MerlynAllen/bilibili_danmaku/
project_urls = 
    Bug Tracker = https://github.com/MerlynAllen/bilibili_danmaku/issues
    Source Code =https://github.com/MerlynAllen/bilibili_danmaku/
classifiers = 
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent


[options]
packages = livedanmaku
install_requires = 
    aioconsole==0.3.3
    aiohttp==3.8.1
    brotli==1.0.9
    brotlipy==0.7.0
    requests==2.26.0
python_requires = >=3.6
